fix ( image overflow )

--- a/app/pages/discussions/discussions.scss
+++ b/app/pages/discussions/discussions.scss
@@ -44,7 +44,7 @@ $infoSpacing: 15px;
 .discussionsImages {
   display: block;
   margin: 15px $profilePhotoOffset;
-  width: 100%;
+  width: 90%;
 }
 
 .discussionsTitle {
